[package]
name = "zika"
version = "3.0.0"
description = "IP Tunneling over MQTT"
edition = "2021"

[[bin]]
name = "zika-server"
path = "src/bin/server.rs"

[[bin]]
name = "zika-client"
path = "src/bin/client.rs"

[dependencies]
base64 = "0.21.5"
bytes = "1.5.0"
env_logger = "0.10.1"
etherparse = "0.13.0"
futures = "0.3.29"
ipnetwork = "0.20.0"
log = "0.4.20"
lru = "0.12.0"
rand = "0.8.5"
rumqttc = { version = "0.23.0", features = ["use-rustls"] }
rustls = "0.21.8"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-util = "0.7.10"
tun = { version = "0.6.1", features = ["async"] }
