[package]
name = "zika"
version = "3.3.3"
license = "MIT"
description = "IP Tunneling over MQTT"
repository = "https://github.com/akiroz/zika"
edition = "2021"

[[bin]]
name = "zika-server"
path = "src/bin/server.rs"

[[bin]]
name = "zika-client"
path = "src/bin/client.rs"

[dependencies]
base64 = "0.21.5"
bytes = "1.5.0"
env_logger = "0.10.1"
etherparse = "0.13.0"
futures = "0.3.29"
ipnetwork = "0.20.0"
log = "0.4.20"
lru = "0.12.0"
rand = "0.8.5"
rustls = "0.21.10"
rustls-pemfile = "2.0.0"
rumqttc = { version = "0.23.0", features = ["use-rustls"] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_default_utils = "0.2.1"
tokio-rustls = "0.25.0"
tokio-util = "0.7.10"
tokio = { version = "1.34.0", features = ["full"] }
tun = { version = "0.6.1", features = ["async"] }
